{
    "name": "PlayerMovement",
    "maps": [
        {
            "name": "tileMovement",
            "id": "262051ad-343f-41e1-a85f-33682dfcf7c2",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "791678e8-7fd2-48a6-9bfe-f35de979f003",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveBox",
                    "type": "Button",
                    "id": "a54a00de-1346-4866-b385-5592eec0e0a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "e68817c9-01f3-48f8-ada4-8de162105d93",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "90a76b09-1479-486b-b6c6-3b0d3d395316",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8d633205-b2db-4718-9d48-df3f059110a8",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e0fe2f4a-b929-494c-abd4-e99ac6d23449",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "63b47e22-2b26-4f4e-bcb6-a6eeb3b5fad0",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9393212d-f7ee-4290-ad57-79b59b2c2bac",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBox",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}